<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/form_padding"
    tools:context="la.random.sample.EditProductsActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                    <Button
                        android:id="@+id/btSave_ep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_save" />
            </LinearLayout>

            <!-- Id lable next to value (use horizontal) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_id"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:saveEnabled="false"
                    android:padding="@dimen/form_tv_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Product Name lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_product_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Description lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <!-- Regular price next to Sale Price  (use horizontal) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- Regular price lable over value  (use vertical with fill parent) -->

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:text="@string/lable_regular_price"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/etRegularPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <!-- Sale price lable over value  (use vertical with fill parent) -->

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:text="@string/lable_sale_price"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/etSalePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </LinearLayout>

            <!-- Image lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
                <Button
                        android:id="@+id/btTakePicture"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/button_take_picture" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_photo"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:id="@+id/ivPhotoPath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Colors lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_colors"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Stores lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_stores"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/etStores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </TableLayout>
    </ScrollView>

</LinearLayout>