<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/form_padding"
    tools:context="la.random.sample.FormViewActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1" >

            <!-- Id lable next to value (use horizontal) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_id"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvId"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:padding="@dimen/form_tv_padding"
                    android:text="5"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Product Name lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_product_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvProductName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="Acme Roadrunner Trap"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Description lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_description"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="Bla bla bla bla some discription the much text yad yad yad have your read that We must clear the mind of the past. Web enlightenment has been achieved thanks to the tireless efforts of folk like the W3C, WaSP, and the major browser creators "
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <!-- Regular price next to Sale Price  (use horizontal) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <!-- Regular price lable over value  (use vertical with fill parent) -->

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:text="@string/lable_regular_price"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/tvRegularPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:text="$100.00"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>

                <!-- Sale price lable over value  (use vertical with fill parent) -->

                <LinearLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:text="@string/lable_sale_price"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/tvSalePrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/form_tv_padding"
                        android:text="$150.00"
                        android:textAppearance="?android:attr/textAppearanceLarge" />
                </LinearLayout>
            </LinearLayout>

            <!-- Image lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_photo"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="Put your Face in the Space"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Colors lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_colors"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvColors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="All the colors of the wind.."
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>

            <!-- Stores lable over value  (use vertical with fill parent) -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="@string/lable_stores"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/tvStores"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/form_tv_padding"
                    android:text="At a store near you"
                    android:textAppearance="?android:attr/textAppearanceLarge" />
            </LinearLayout>
        </TableLayout>
    </ScrollView>

</LinearLayout>